--- a/src/lib/componentsReact/styles.css
+++ b/src/lib/componentsReact/styles.css
@@ -151,9 +151,7 @@
 .header-container {
     color: rgb(87, 87, 87);
     background-color: rgba(255, 255, 255, 0.95);
-    /* Mostly white with a bit of transparency */
     width: 100%;
-    /* Ensure it spans the full width */
     top: 5vh;
     left: 0;
     z-index: 1000;
@@ -173,9 +171,8 @@
     flex-shrink: 0;
     flex-grow: 0;
     align-items: center;
-    min-width: 95%;
-    max-width: 95%;
-    width: 80vw;
+    width: 100%;
+    /* Cambiado a 100% */
 }
 
 .header-inner {
@@ -184,16 +181,25 @@
     flex-wrap: wrap;
     position: relative;
     display: flex;
-    width: 80vw;
+    width: 100%;
+    /* Cambiado a 100% */
     height: 100%;
-    margin-right: auto;
-    margin-left: auto;
-    margin-top: 0px;
-    margin-bottom: 0px;
-    margin-left: calc(-4% / 2);
-    margin-right: calc(-4% / 2);
-    flex-shrink: 0;
-    flex-grow: 0;
+    margin: 0 auto;
+    /* Simplificado */
+}
+
+/* Media Queries para diferentes resoluciones de pantalla */
+@media screen and (min-width: 1200px) {
+    .header-inner {
+        max-width: 1200px;
+        /* Ajusta esto según tu diseño */
+    }
+}
+
+@media screen and (max-width: 1199px) {
+    .header-inner {
+        max-width: 100%;
+    }
 }
 
 .logo-container,
@@ -303,10 +309,8 @@
     align-items: center;
     font-size: 18px;
     justify-content: center;
-    padding-bottom: 14px;
-    padding-left: 24px;
-    padding-right: 24px;
-    padding-top: 14px;
+    padding: 14px 24px;
+    margin-left: 7px;
     position: relative;
     text-transform: capitalize;
     display: inline-flex;
