--- a/src/lib/componentsReact/styles.css
+++ b/src/lib/componentsReact/styles.css
@@ -310,7 +310,7 @@
     font-size: 18px;
     justify-content: center;
     padding: 14px 24px;
-    margin-left: 7px;
+    margin-left: 0.8rem;
     position: relative;
     text-transform: capitalize;
     display: inline-flex;
