--- a/src/lib/componentsReact/banner.css
+++ b/src/lib/componentsReact/banner.css
@@ -251,6 +251,8 @@
     background-size: cover;
     background-position: center;
     color: #fff;
+    display: flex;
+    justify-content: center;
 }
 
 .neon-caption {
